--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -1297,44 +1297,43 @@
                 <div class="section_content_body">
                     <div class="section_content_body--center--padding_0">
                         <div class="content__welcome-section_2_0--justify-content_space-between--row-gap_50">
-
-                            <div class="card__welcome-section--width_788--height_640px--flex-grow_1--gap_27--flex-direction_column--background_white--padding_80_88--border-radius_20">
-                                <div class="image__welcome-section_2_0">
+                            <div class="card__welcome-section--width_788--height_640px--flex-grow_1--gap_55--flex-direction_column--background_#F5F5F5--padding_80_88--border-radius_20">
+                                <div class="image__welcome-section_2_0--width_137px--height_137px">
                                     <img src="./this/img/sections/1/6/money.svg">
                                 </div>
                                 <div class="description__welcome-section_2_0">
-                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                                    <h4 class="description__section_1_6--text-align--margin-bottom_22">
                                         зарплата
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
-                                        <p class="paragraph--left--font-size_24">
+                                        <p class="paragraph--left--font-size_24--text-transform_initial--line-height_30px--font-weight_400">
                                             Зарплата выплачивается 2 раза в месяц: <br>за первую половину месяца - <br>
-                                            <span class="bold">25-го числа текущего месяца, </span><br>за вторую половину - <br>
-                                            <span class="bold--display_block--margin-bottom_8">10-го числа следующего месяца.</span>
+                                            <span class="bold--text-transform_initial">25-го числа текущего месяца, </span><br>за вторую половину - <br>
+                                            <span class="bold--display_block--margin-bottom_8--text-transform_initial">10-го числа следующего месяца.</span>
                                             В случае, если у тебя будут вопросы <br>
                                             по расчету и выплате зарплаты, <br>
-                                            <span class="--display_block--margin-bottom_8">обращайся в бухгалтерию!</span>
-                                            <a class="link paragraph" href="https://vks.digitalms.ru">Подробнее ты можешь узнать тут</a>
+                                            <span class="--display_block--margin-bottom_8--text-transform_initial">обращайся в бухгалтерию!</span>
+                                            <a class="link paragraph--font-weight_800" href="https://vks.digitalms.ru">Подробнее ты можешь узнать тут</a>
                                         </p>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="card__welcome-section--width_788--height_640px--flex-grow_1--gap_27--flex-direction_column--background_white--padding_80_88--border-radius_20">
-                                <div class="image__welcome-section_2_0">
+                            <div class="card__welcome-section--width_788--height_640px--flex-grow_1--gap_55--flex-direction_column--background_#F5F5F5--padding_80_88--border-radius_20">
+                                <div class="image__welcome-section_2_0--width_137px--height_137px">
                                     <img src="./this/img/sections/1/6/sunbed.svg">
                                 </div>
                                 <div class="description__welcome-section_2_0">
-                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                                    <h4 class="description__section_1_6--text-align--margin-bottom_22">
                                         отпуск
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
-                                        <p class="paragraph--left--font-size_22px">
+                                        <p class="paragraph--left--font-size_22px--text-transform_initial">
                                             По законодательству ты имеешь право на отпуск <br>
-                                            <span class="bold--font-size_24px">через 6 месяцев работы</span> в компании.<br>
+                                            <span class="bold--font-size_24px--text-transform_initial">через 6 месяцев работы</span> в компании.<br>
                                             Обычно отпуск делится на 2 части по 14 дней, <br>
                                             но бывают отпуска «4 по 7» и «3 по 10»<br>
-                                            <span class="--display_block--margin-bottom_8">(мы же понятно объяснили?)</span>
+                                            <span class="--display_block--margin-bottom_12--text-transform_initial">(мы же понятно объяснили?)</span>
                                             В любом случае, если у тебя есть вопросы <br>по отпуску сначала обратись в отдел персонала, <br>а потом к своему Руководителю.
                                         </p>
                                     </div>
@@ -1365,41 +1364,45 @@
                     <div class="section_content_body--center--padding_0">
                         <div class="content__welcome-section_2_0--justify-content_space-between--row-gap_50">
 
-                            <div class="card__welcome-section--width_788--height_475px--flex-grow_1--gap_27--flex-direction_column--background_white--padding_80_88--border-radius_20">
-                                <div class="image__welcome-section_2_0">
+                            <div class="card__welcome-section--width_788--height_475px--flex-grow_1--gap_27--flex-direction_column--background_#F5F5F5--padding_80_88--border-radius_20">
+                                <div class="image__welcome-section_2_0--width_132px--height_132px">
                                     <img src="./this/img/sections/1/7/hospital-sign.svg">
                                 </div>
                                 <div class="description__welcome-section_2_0">
-                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                                    <h4 class="description__section_1_6--text-align--margin-bottom_22">
                                         дмс
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
-                                        <p class="paragraph--left--font-size_24--width_83%">
-                                            После успешного прохождения испытательного срока тебе будет доступен ДМС. Мы сотрудничаем со страховой компанией <span class="bold">СОГАЗ</span> и предлагаем расширенный пакет со стоматологией.
+                                        <p class="paragraph--left--font-size_24--text-transform_initial--line-height_30px">
+                                            После успешного прохождения испытательного <br>
+                                            срока тебе будет доступен ДМС. Мы сотрудничаем <br>
+                                            со страховой компанией <span class="bold">СОГАЗ</span> и предлагаем <br>
+                                            расширенный пакет со стоматологией.
                                         </p>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="card__welcome-section--width_788--height_475px--flex-grow_1--gap_27--flex-direction_column--background_white--padding_80_88--border-radius_20">
-                                <div class="image__welcome-section_2_0">
+                            <div class="card__welcome-section--width_788--height_475px--flex-grow_1--gap_27--flex-direction_column--background_#F5F5F5--padding_80_88--border-radius_20">
+
+                                <div class="image__welcome-section_2_0--width_132px--height_132px">
                                     <img src="./this/img/sections/1/7/house.svg">
                                 </div>
                                 <div class="description__welcome-section_2_0">
-                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                                    <h4 class="description__section_1_6--text-align--margin-bottom_22">
                                         ипотека
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
-                                        <p class="paragraph--left--font-size_24--width_83%">
+                                        <p class="paragraph--left--font-size_24--text-transform_initial--line-height_30px">
                                             Цифромед является аккредитованной</br>
                                             IT-компанией, в связи с чем наши сотрудники могут получить ипотеку на льготных условиях.</br>
-                                            Подробнее ты можешь  <a class="link paragraph" href="https://vks.digitalms.ru">узнать тут</a>
+                                            Подробнее ты можешь  <a class="link paragraph bold--text-decoration_underline" href="https://vks.digitalms.ru">узнать тут</a>
                                         </p>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="card__welcome-section_2_1--color_main--height_180--justify-content_space-between--padding_0_104px_0_48px">
+                            <div class="card__welcome-section_2_1--color_main--height_180--justify-content_space-between--padding_0_104px_0_48px--height_200px--background_d">
                                 <div class="data-image__welcome-section">
                                     <div class="image__welcome-section_2_0">
                                         <img src="./this/img/sections/1/7/glasses.svg">
@@ -1412,16 +1415,16 @@
                                 </div>
                                 <div class="description__welcome-center_1_7">
                                     <p class="paragraph">Для сотрудников компании доступны</p>
-                                    <p class="paragraph--font-size_24px--font-weight_400">1 000+ электронных книг и 500+ аудиокниг.</p>
+                                    <p class="paragraph--font-size_24px--font-weight_700">1 000+ электронных книг и 500+ аудиокниг.</p>
                                     <p class="paragraph">Скачивай в удобном формате на любом устройстве!</p>
                                 </div>
                                 <div class="button__container--display_flex--gap_16px">
                                     <div class="wrapper-button__welcome-section_1_7">
                                         <div class="button__welcome-section_2_1">
-                                            <p class="paragraph--button--text-decoration_none">МИФ</p>
+                                            <p class="paragraph--button--text-decoration_none--font-size_24px--font-weight_700">МИФ</p>
                                         </div>
                                         <div class="button__welcome-section_2_1">
-                                            <p class="paragraph--button--text-decoration_none">Альпина</p>
+                                            <p class="paragraph--button--text-decoration_none--font-size_24px--font-weight_700">Альпина</p>
                                         </div>
                                     </div>
                                     <div class="description__welcome-center_1_7--align-items_center">
@@ -1430,7 +1433,6 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
