--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -1459,17 +1459,20 @@
                     <div class='section_content_body--center--padding_0'>
                         <div class='content__welcome-section_2_0--justify-content_space-between--row-gap_50'>
                             <div class='card__welcome-section_2_0--gap_27'>
-                                <div class='image__welcome-section_2_0'>
+                                <div class='image__welcome-section_2_0--height_104px--width_104px'>
                                     <img src="./this/img/sections/2/0/1c.svg"/>
                                 </div>
                                 <div class='description__welcome-section_2_0'>
-                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_16px">
                                         1С:Документооборот
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
-                                        <p class="paragraph--left--font-size_24">
-                                            В компании внедрена Система внутреннего документооборота на базе 1С:Документооборот. Регламенты на бизнес-процессы, инструкции пользователей по работе с функционалом системы опубликованы на
-                                            <span class="link">
+                                        <p class="paragraph--left--font-size_22px--text-transform_initial">
+                                            В компании внедрена Система внутреннего документооборота <br>
+                                            на базе 1С:Документооборот. Регламенты на бизнес-процессы,<br>
+                                            инструкции пользователей по работе с функционалом системы<br>
+                                            опубликованы на
+                                            <span class="link--text-transform_initial--text-decoration_underline">
                                                 корпоративном портале
                                             </span>
                                             .
@@ -1479,55 +1482,67 @@
                             </div>
 
                             <div class='card__welcome-section_2_0--gap_27'>
-                                <div class='image__welcome-section_2_0'>
+                                <div class='image__welcome-section_2_0--height_104px--width_104px'>
                                     <img src="./this/img/sections/2/0/mail.svg"/>
                                 </div>
                                 <div class='description__welcome-section_2_0--text-align'>
-                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_16px">
                                         почта
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
-                                        <p class="paragraph--left--font-size_24">
-                                            В компании корпоративная почта является одним из важнейших инструментов внутренней коммуникации. С ее помощью мы общаемся с коллегами и партнерам, получаем важные рассылки и организовываем встречи. Не пропусти важные рассылки! 😉
+                                        <p class="paragraph--left--font-size_22px--text-transform_initial">
+                                            В компании корпоративная почта является одним из важнейших <br>
+                                            инструментов внутренней коммуникации. С ее помощью мы<br>
+                                            общаемся с коллегами и партнерам, получаем важные рассылки <br>
+                                            и организовываем встречи. Не пропусти важные рассылки! 😉
                                         </p>
                                     </div>
                                 </div>
                             </div>
                             <div class='card__welcome-section_2_0--gap_27'>
-                                <div class='image__welcome-section_2_0'>
+                                <div class='image__welcome-section_2_0--height_104px--width_104px'>
                                     <img src="./this/img/sections/2/0/handshake.svg"/>
                                 </div>
 
                                 <div class='description__welcome-section_2_0--text-align'>
-                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_16px">
                                         обращение к коллегам
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
-                                        <p class="paragraph--left--font-size_24">
-                                            Не нужно стесняться спрашивать и обращаться за помощью к коллегам. Большая часть сотрудников обращается друг к другу
-                                            <span class="link"> по имени и на "ты"</span>
+                                        <p class="paragraph--left--font-size_22px--text-transform_initial">
+                                            Не нужно стесняться спрашивать и обращаться за помощью <br>
+                                            к коллегам. Большая часть сотрудников обращается друг к другу<br>
+                                            <span class="link --text-transform_initial"> по имени и на "ты"</span>
                                             , а к руководителям -
-                                            <span class="link"> и на "вы", и на "ты"</span>.
-                                            Лучший способ что-то выяснить – подойти и поговорить. Мы уважительно относимся друг к другу, поэтому разговариваем вежливо.  Не требуем, не приказываем (в том числе и подчиненным), а просим, рекомендуем и предлагаем. В кабинетах и openspace – мы разговариваем не громко и стараемся не мешать коллегам.
+                                            <span class="link --text-transform_initial"> и на "вы", и на "ты"</span>.
+                                            Лучший <br>
+                                            способ что-то выяснить – подойти и поговорить.Мы уважительно <br>
+                                            относимся друг к другу, поэтому разговариваем вежливо. <br>
+                                            Не требуем, не приказываем (в том числе и подчиненным), а просим,<br>
+                                            рекомендуем и предлагаем. В кабинетах и openspace – мы <br>
+                                            разговариваем не громко и стараемся не мешать коллегам.
                                         </p>
                                     </div>
                                 </div>
                             </div>
                             <div class='card__welcome-section_2_0--gap_27'>
-                                <div class='image__welcome-section_2_0'>
+                                <div class='image__welcome-section_2_0--height_104px--width_104px'>
                                     <img src="./this/img/sections/2/0/Teacher.svg"/>
                                 </div>
                                 <div class='description__welcome-section_2_0--text-align'>
-                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_16px">
                                         переговорные комнаты
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
-                                        <p class="paragraph--left--font-size_24">
-                                            Для проведения встреч ты можешь воспользоваться Переговорной №1 Основная (мы ее называем «большая» или «с гербом»).
-                                            Если встречу с коллегами необходимо провести онлайн,
-                                            то организовать ее нужно в нашей системе видеоконференций
+                                        <p class="paragraph--left--font-size_22px--text-transform_initial--margin-bottom_12">
+                                            Для проведения встреч ты можешь воспользоваться Переговорной <br>
+                                            №1 Основная (мы ее называем «большая» или «с гербом»).<br>
+                                        </p>
+                                        <p class="paragraph--left--font-size_24--text-transform_initial">
+                                            Если встречу с коллегами необходимо провести онлайн,<br>
+                                            то организовать ее нужно в нашей системе видеоконференций<br>
                                             по ссылке:
-                                            <a class="link paragraph" href="https://vks.digitalms.ru"> https://vks.digitalms.ru </a>
+                                            <a class="link paragraph --text-decoration_underline" href="https://vks.digitalms.ru"> https://vks.digitalms.ru </a>
                                             .
                                         </p>
                                     </div>
@@ -1681,18 +1696,19 @@
                     <div class='section_content_body--center--padding_0'>
                         <div class='content__welcome-section_2_0--justify-content_space-between--row-gap_50'>
                             <div class='card__welcome-section_2_0--gap_27'>
-                                <div class='image__welcome-section_2_0'>
+                                <div class='image__welcome-section_2_0--height_104px--width_104px'>
                                     <img src="./this/img/sections/3/0/note.svg"/>
                                 </div>
                                 <div class='description__welcome-section_2_0'>
-                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_16px">
                                         корпоративный стиль
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
-                                        <p class="paragraph--left--font-size_24">
-                                            В компании есть официальный логотип, бланки для документов, реквизиты компании.
-                                            <span class="link">
-                                                Документы доступны для скачивания только пользователям домена
+                                        <p class="paragraph--left--font-size_22px--text-transform_initial">
+                                            В компании есть официальный логотип, бланки <br>
+                                            для документов, реквизиты компании.
+                                            <span class="link--text-transform_initial">
+                                                Документы <br> доступны для скачивания только пользователям домена
                                             </span>
                                             .
                                         </p>
@@ -1700,51 +1716,56 @@
                                 </div>
                             </div>
                             <div class='card__welcome-section_2_0--gap_27'>
-                                <div class='image__welcome-section_2_0'>
+                                <div class='image__welcome-section_2_0--height_104px--width_104px'>
                                     <img src="./this/img/sections/3/0/paperclip.svg"/>
                                 </div>
                                 <div class='description__welcome-section_2_0--text-align'>
-                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_16px">
                                         канцелярия
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
-                                        <p class="paragraph--left--font-size_24">
-                                            Если тебе необходимо получить канцелярию, например лотки для документов, или нужно докупить настольную лампу, обратись в административно-хозяйственный отдел. Почта:
+                                        <p class="paragraph--left--font-size_22px--text-transform_initial">
+                                            Если тебе необходимо получить канцелярию, например лотки <br>
+                                            для документов, или нужно докупить настольную лампу, обратись <br>
+                                            в административно-хозяйственный отдел. Почта:
                                             <a class="link paragraph" href="mailto:admin@digitalms.ru">admin@digitalms.ru</a>
                                         </p>
                                     </div>
                                 </div>
                             </div>
                             <div class='card__welcome-section_2_0--gap_27'>
-                                <div class='image__welcome-section_2_0'>
+                                <div class='image__welcome-section_2_0--height_104px--width_104px'>
                                     <img src="./this/img/sections/3/0/printer.svg"/>
                                 </div>
 
                                 <div class='description__welcome-section_2_0--text-align'>
-                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_16px">
                                         принтер
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
-                                        <p class="paragraph--left--font-size_24">
-                                            По умолчанию к рабочему месту нового сотрудника подключено ближайшее МФУ. Для подключения к другим принтерам необходимо обратиться в техническую поддержку
-                                            <a class="link paragraph" href="mailto:help@digitalms.ru">help@digitalms.ru</a>
+                                        <p class="paragraph--left--font-size_22px--text-transform_initial">
+                                            По умолчанию к рабочему месту нового сотрудника <br>
+                                            подключено ближайшее МФУ. Для подключения <br>
+                                            к другим принтерам необходимо обратиться<br>
+                                            в техническую поддержку
+                                            <a class="link paragraph --text-decoration_underline" href="mailto:help@digitalms.ru">help@digitalms.ru</a>
                                             .
                                         </p>
                                     </div>
                                 </div>
                             </div>
                             <div class='card__welcome-section_2_0--gap_27'>
-                                <div class='image__welcome-section_2_0'>
+                                <div class='image__welcome-section_2_0--height_104px--width_104px'>
                                     <img src="./this/img/sections/3/0/technical.svg"/>
                                 </div>
                                 <div class='description__welcome-section_2_0--text-align'>
-                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_27">
+                                    <h4 class="description__welcome-section_2_0--text-align--margin-bottom_16px">
                                         Тех. поддержка
                                     </h4>
                                     <div class="paragraph__welcome-section_2_0">
-                                        <p class="paragraph--left--font-size_24">
+                                        <p class="paragraph--left--font-size_22px--text-transform_initial">
                                             Если тебе необходимо установить дополнительное ПО, запросить технику или возникли технические трудности, пиши на
-                                            <a class="link paragraph" href="mailto:help@digitalms.ru">help@digitalms.ru</a>
+                                            <a class="link paragraph --text-decoration_underline" href="mailto:help@digitalms.ru">help@digitalms.ru</a>
                                             . Коллеги постараются оперативно решить вопрос для продолжения комфортной работы.
                                         </p>
                                     </div>
