--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -473,7 +473,8 @@
                 </div>
                 <div class='section_content_body'>
                     <p class='paragraph has-animation--margin-top_44'>
-                        Компания была образована в 2019 году как центр компетенций цифрового здравоохранения. Сегодня Цифромед является головной компанией
+                        Компания была образована в 2019 году как центр компетенций цифрового здравоохранения. Сегодня Цифромед является <br>
+                        головной компанией
                         <span class="bold">Кластера «Медицина»</span>
                         ПАО Ростелеком.
                     </p>
@@ -1569,20 +1570,22 @@
                     <p class='section_content_header_p'>Программа рекомендаций</p>
                     <p class='section_content_header_p_right'></p>
                 </div>
-                <div class='section_content_body--gap_36--center'>
+                <div class='section_content_body--gap_36px--center'>
                     <div class="card__welcome-section_2_1">
                         <div class='image__welcome-section_2_0'>
                             <img src="./this/img/sections/2/1/thumb-up.svg"/>
                         </div>
-                        <div class='description__welcome-section_2_1'>
-                            Сотрудники нашей компании готовы рекомендовать работу в Цифромеде своим друзьям и знакомым. Теперь ты тоже можешь это сделать. Если вакансия кому-то подходит, то можешь напрямую отправить ссылку или прислать резюме в HR :)
+                        <div class='description__welcome-section_2_1--text-transform_initial'>
+                            Сотрудники нашей компании готовы рекомендовать работу в Цифромеде своим <br>
+                            друзьям и знакомым. Теперь ты тоже можешь это сделать. Если вакансия кому-то <br>
+                            подходит, то можешь напрямую отправить ссылку или прислать резюме в HR :)
                         </div>
                     </div>
                     <div class="card__welcome-section_2_1--color_main--height_180">
                         <div class='image__welcome-section_2_0'>
                             <img src="./this/img/sections/2/1/profile.svg"/>
                         </div>
-                        <div class='description__welcome-section_2_1--width_700'>
+                        <div class='description__welcome-section_2_1--width_733px--text-transform_initial'>
                             Активные вакансии можно найти на нашей странице HH.ru
                         </div>
                         <div class='button__welcome-section_2_1'>
@@ -1608,7 +1611,7 @@
                     <p class='section_content_header_p'>Корпоративные праздники</p>
                     <p class='section_content_header_p_right'></p>
                 </div>
-                <div class='section_content_body--gap_100--center'>
+                <div class='section_content_body--gap_100px--center'>
                     <p class="paragraph--2_0">
                         Традиционно мы отмечаем 4 праздника в компании:
                     </p>
@@ -1656,8 +1659,10 @@
                             <p class='paragraph--left--width_59--font-size_24'>
                             <span class="bold">
                                 Наш коллектив активно участвует в корпоративных мероприятиях компании.
-                            </span>
-                                В командных развлечениях мы позитивны и стремимся получить максимум эмоций, а также всегда поддерживаем и подбадриваем наших коллег, участвующих в конкурсах или соревнованиях.
+                            </span><br>
+                                В командных развлечениях мы позитивны и стремимся получить максимум <br>
+                                эмоций, а также всегда поддерживаем и подбадриваем наших коллег,<br>
+                                участвующих в конкурсах или соревнованиях.
                             </p>
                         </div>
                         <div class="card__welcome-section_2_2--width_464">
