--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -1653,7 +1653,7 @@
 
                     <div class="cotainer__welcome-section_2_2">
                         <div class="card__welcome-section_2_2">
-                            <div class='image__welcome-section_2_2--square_150'>
+                            <div class='image__welcome-section_2_2--height_131px--width_131'>
                                 <img src="./this/img/sections/2/2/handUp.svg"/>
                             </div>
                             <p class='paragraph--left--width_59--font-size_24'>
@@ -1799,7 +1799,7 @@
                     <p class='section_content_header_p_right'></p>
                 </div>
 
-                <div class='section_content_body--gap_100--center'>
+                <div class='section_content_body--gap_100px--center'>
                     <div class="card__welcome-section_3_1--align-self_center">
                         <div class="image__welcome-section_2_2--square_158">
                             <img src="./this/img/sections/3/1/id-card 1.svg">
@@ -1810,7 +1810,8 @@
                             </p>
 
                             <p class="paragraph--left--font-size_24--margin-top_4">
-                                Не забывай прикладывать карточку сотрудника каждый раз, когда собираешься покинуть офис или вернуться обратно.
+                                Не забывай прикладывать карточку сотрудника каждый раз, когда собираешься покинуть<br>
+                                офис или вернуться обратно.
                             </p>
 
                             <p class="paragraph--left--font-size_24--margin-top_4">
@@ -1819,16 +1820,19 @@
                         </div>
                     </div>
 
-                    <div class="content__welcome-section_2_2--justify-content_space-evenly">
+                    <div class="content__welcome-section_2_2">
 
                         <div class="card__welcome-section_2_2--wh_465_220--background_main--border-radius_21">
                             <div class="image__welcome-section_2_0--square_158--padding_40--justify-content_flex-start">
                                 <img src="./this/img/sections/3/1/warning.svg">
                             </div>
                             <div class="container__welcome-section_3_1--display_center">
-
                                 <p class="paragraph--left--font-size_24--color_white--width_283">
-                                    По данным СКУД ведется табель учета рабочего времени, а значит и расчет заработной платы ;)
+                                    По данным СКУД <br>
+                                    ведется табель учета <br>
+                                    рабочего времени, <br>
+                                    а значит и расчет <br>
+                                    заработной платы ;)
                                 </p>
                             </div>
                         </div>
@@ -1844,11 +1848,11 @@
                                     </span>
                                 </p>
 
-                                <p class="paragraph--left--font-size_24--margin-top_4">
-                                    Свяжись с отделом АХО для заказа временного пропуска.
+                                <p class="paragraph--left--font-size_24--margin-top_4--margin-bottom_8px">
+                                    Свяжись с отделом АХО для заказа<br> временного пропуска.
                                 </p>
 
-                                <p class="paragraph--left--font-size_24--margin-top_4">
+                                <p class="paragraph--left--font-size_24--margin-top_4--text-decoration_underline">
                                     Почта:
                                     <span class="link bold">admin@digitalms.ru</span>
                                 </p>
