--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -452,7 +452,7 @@
                     slot="fer-form__save"
                     data-css-shadow="welcome"
             >
-                <p class="save">Сохранить</p>
+                <p class="save">Отправить</p>
             </fer-button>
         </welcome-feedback>
     </welcome-section>
