--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -1260,6 +1260,12 @@
                                         </p>
                                     </div>
                                 </div>
+                                <div class="atention">
+                                    <svg width="85" height="85" viewBox="0 0 85 85" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <circle cx="42.5" cy="42.5" r="35" fill="#EB663B" stroke="white" stroke-width="15"/>
+                                        <path d="M38.44 45V28.32H46.04V45H38.44ZM38.44 57V49.64H46.04V57H38.44Z" fill="white"/>
+                                    </svg>
+                                </div>
                             </div>
 
                             <div class="card__welcome-section--flex-direction_column--width_626--gap_55--border-radius_20--padding_80_88--background_main">
