--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -179,7 +179,7 @@
         >
             <div class="auction-data">
                 <div class="auction-data__table">
-                    <div class="auction-data__table_header">
+                    <div class="auction-data__table_header --table_0">
                         <div class="auction-data__table_header_td">Домен</div>
                         <div class="auction-data__table_header_td">Название</div>
                         <div class="auction-data__table_header_td">Версия схемы</div>
@@ -323,7 +323,7 @@
         >
             <div class="auction-data">
                 <div class="auction-data__table">
-                    <div class="auction-data__table_header">
+                    <div class="auction-data__table_header --table_3">
                         <div class="auction-data__table_header_td">Название</div>
                         <div class="auction-data__table_header_td">Описание</div>
                         <div class="auction-data__table_header_td background-transparent"></div>
@@ -366,7 +366,7 @@
         >
             <div class="auction-data">
                 <div class="auction-data__table">
-                    <div class="auction-data__table_header">
+                    <div class="auction-data__table_header --table_3">
                         <div class="auction-data__table_header_td">Название</div>
                         <div class="auction-data__table_header_td">Описание</div>
                         <div class="auction-data__table_header_td background-transparent"></div>
@@ -438,12 +438,12 @@
         >
             <div class="container__schema">
                 <div class="input">
-                    <label for="schema">Домен</label>
-                    <input id="schema" placeholder="1"/>
+                    <label for="domain">Домен</label>
+                    <input id="domain" readonly placeholder="showcase.booking mo 1.1.2"/>
                 </div>
                 <div class="input">
-                    <label for="region">Название схемы</label>
-                    <input id="region" placeholder="showcase.booking mo 1.1.2"/>
+                    <label for="name">Название схемы</label>
+                    <input id="name" readonly placeholder="name"/>
                 </div>
             </div>
         </fer-form>
@@ -460,7 +460,7 @@
         <fer-region slot="fer-region">
             <div class="input--margin-bottom_12px">
                 <label for="version">Версия</label>
-                <input id="version" placeholder="1.1.2"/>
+                <input id="version" placeholder="Введите версию"/>
             </div>
             <div class="input--margin-bottom_12px">
                 <label for="title">Title</label>
@@ -511,7 +511,7 @@
                 data-css-shadow="rules"
                 data-services-path="rules"
                 data-type="fer-form"
-                data-id="save"
+                data-id="0_0"
                 data-event="rules"
                 data-to="0"
                 slot="fer-form__save"
