--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -1216,7 +1216,7 @@
                             <p class='paragraph--left--width_100p--font-size_24--text-transform_initial'>
                                 О других кафе и ресторанах в башне<br>
                                 ты можешь узнать
-                                <span class="link">тут.</span>
+                                <a href="http://n-tower.ru/#/clients/105.html" class="link">тут.</a>
                             </p>
                         </div>
                     </div>
@@ -1402,7 +1402,7 @@
                                         <p class="paragraph--left--font-size_24--text-transform_initial--line-height_30px">
                                             Цифромед является аккредитованной</br>
                                             IT-компанией, в связи с чем наши сотрудники могут получить ипотеку на льготных условиях.</br>
-                                            Подробнее ты можешь  <a class="link paragraph bold--text-decoration_underline" href="https://vks.digitalms.ru">узнать тут</a>
+                                            Подробнее ты можешь  <a class="link paragraph bold--text-decoration_underline" href="https://digitalmsru.sharepoint.com/:b:/g/EYG8pzQW83hNhjCDhAEh8BsBDuAgBXM9hw61J3mxCmfC-w?e=2145Ki">узнать тут</a>
                                         </p>
                                     </div>
                                 </div>
@@ -1590,11 +1590,11 @@
                         <div class='image__welcome-section_2_0'>
                             <img src="./this/img/sections/2/1/profile.svg"/>
                         </div>
-                        <div class='description__welcome-section_2_1--width_733px--text-transform_initial'>
+                        <div class='description__welcome-section_2_1--width_733px--text-transform_initial--color_white'>
                             Активные вакансии можно найти на нашей странице HH.ru
                         </div>
-                        <div class='button__welcome-section_2_1'>
-                            <p class="paragraph--button">Смотреть</p>
+                        <div class='button__welcome-section_2_1 --text-decoration-line_underline'>
+                            <a  href="https://hh.ru/employer/4333633?hhtmFrom=vacancy" class="paragraph--button">Смотреть</a>
                         </div>
                     </div>
                 </div>
@@ -1676,9 +1676,9 @@
                             </div>
                             <p class="paragraph--text-align">
                                 Как мы празднуем можно посмотреть
-                                <span class="link">
+                                <a href="https://digitalmsru.sharepoint.com/:f:/g/EjGeidcebMpOjGC61rcct-wB4MLofCf8Zdps_DVQQ8boCQ?e=rmyziY" class="link">
                                     здесь
-                                </span>
+                                </a>
                             </p>
                         </div>
                     </div>
