--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -2080,7 +2080,7 @@
                 <div class='section_content_body'>
                     <div class='section_content_body--center--padding_0'>
                         <div class='content__welcome-section_2_0--justify-content_space-between--row-gap_50'>
-                            <div class='card__welcome-section_2_0--gap_27'>
+                            <div class='card__welcome-section_2_0--gap_27--cursor_text'>
                                 <div class='image__welcome-section_2_0--height_104px--width_104px'>
                                     <img src="./this/img/sections/2/0/1c.svg"/>
                                 </div>
@@ -2103,7 +2103,7 @@
                                 </div>
                             </div>
 
-                            <div class='card__welcome-section_2_0--gap_27'>
+                            <div class='card__welcome-section_2_0--gap_27--cursor_text'>
                                 <div class='image__welcome-section_2_0--height_104px--width_104px'>
                                     <img src="./this/img/sections/2/0/mail.svg"/>
                                 </div>
@@ -2121,7 +2121,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class='card__welcome-section_2_0--gap_27'>
+                            <div class='card__welcome-section_2_0--gap_27--cursor_text'>
                                 <div class='image__welcome-section_2_0--height_104px--width_104px'>
                                     <img src="./this/img/sections/2/0/handshake.svg"/>
                                 </div>
@@ -2147,7 +2147,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class='card__welcome-section_2_0--gap_27'>
+                            <div class='card__welcome-section_2_0--gap_27--cursor_text'>
                                 <div class='image__welcome-section_2_0--height_104px--width_104px'>
                                     <img src="./this/img/sections/2/0/Teacher.svg"/>
                                 </div>
@@ -2321,7 +2321,7 @@
                 <div class='section_content_body'>
                     <div class='section_content_body--center--padding_0'>
                         <div class='content__welcome-section_2_0--justify-content_space-between--row-gap_50'>
-                            <div class='card__welcome-section_2_0--gap_27'>
+                            <div class='card__welcome-section_2_0--gap_27--cursor_text'>
                                 <div class='image__welcome-section_2_0--height_104px--width_104px'>
                                     <img src="./this/img/sections/3/0/note.svg"/>
                                 </div>
@@ -2341,7 +2341,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class='card__welcome-section_2_0--gap_27'>
+                            <div class='card__welcome-section_2_0--gap_27--cursor_text'>
                                 <div class='image__welcome-section_2_0--height_104px--width_104px'>
                                     <img src="./this/img/sections/3/0/paperclip.svg"/>
                                 </div>
@@ -2354,12 +2354,12 @@
                                             Если тебе необходимо получить канцелярию, например лотки <br>
                                             для документов, или нужно докупить настольную лампу, обратись <br>
                                             в административно-хозяйственный отдел. Почта:
-                                            <a class="link paragraph" href="mailto:admin@digitalms.ru">admin@digitalms.ru</a>
+                                            <a class="link paragraph --text-decoration_underline" href="mailto:admin@digitalms.ru">admin@digitalms.ru</a>
                                         </p>
                                     </div>
                                 </div>
                             </div>
-                            <div class='card__welcome-section_2_0--gap_27'>
+                            <div class='card__welcome-section_2_0--gap_27--cursor_text'>
                                 <div class='image__welcome-section_2_0--height_104px--width_104px'>
                                     <img src="./this/img/sections/3/0/printer.svg"/>
                                 </div>
@@ -2380,7 +2380,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class='card__welcome-section_2_0--gap_27'>
+                            <div class='card__welcome-section_2_0--gap_27--cursor_text'>
                                 <div class='image__welcome-section_2_0--height_104px--width_104px'>
                                     <img src="./this/img/sections/3/0/technical.svg"/>
                                 </div>
@@ -2473,9 +2473,9 @@
                                     Свяжись с отделом АХО для заказа<br> временного пропуска.
                                 </p>
 
-                                <p class="paragraph--left--font-size_24--margin-top_4--text-decoration_underline">
+                                <p class="paragraph--left--font-size_24--margin-top_4">
                                     Почта:
-                                    <span class="link bold">admin@digitalms.ru</span>
+                                    <a class="link paragraph --text-decoration_underline" href="mailto:admin@digitalms.ru">admin@digitalms.ru</a>
                                 </p>
                             </div>
                         </div>
